<resources>
    <string name="app_name">PocketDoctor</string>
    <string name="hello_blank_fragment">Fragment</string>
    <!-- Main -->
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_reports">Reports</string>
    <string name="bottom_navigation_my_page">My Page</string>

    <!-- Home Fragment -->
    <string name="home_fragment_title">Medical Counseling Type</string>
    <string name="home_fragment_melancholia">Melancholia</string>
    <string name="home_fragment_panic">Panic Disorder</string>
    <string name="home_fragment_insomnia">Insomnia</string>
    <string name="home_fragment_ocd">OCD</string>
    <string name="home_fragment_dementia">Dementia</string>
    <string name="home_fragment_eating">Eating Disorder</string>
    <string name="home_fragment_anxiety">Anxiety</string>
    <string name="home_fragment_etc">Etc</string>

    <!-- Hospital Detail -->
    <string name="hospital_detail_information">Information</string>
    <string name="hospital_detail_counseling_time">Counseling Time</string>
    <string name="hospital_detail_location">Location</string>
    <string name="hospital_detail_request_button">Request Reservation</string>

    <!-- Login Home -->
    <string name="login_home_move_to_login">Continue with Pocket Doctor</string>

    <!-- Login -->
    <string name="login_title">Log In</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_find_account">Find Account</string>
    <string name="login_find_password">Find Password</string>
    <string name="login_login_button">Log In</string>
    <string name="login_register_button">Register</string>

    <!-- Register -->
    <string name="signup_title">Register</string>
    <string name="signup_name_hint">Name</string>
    <string name="signup_email_hint">Email</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_cpw_hint">Password Again</string>
    <string name="signup_phone_hint">Phone Number</string>
    <string name="signup_next">Next</string>
    <string name="signup_create">Create Account</string>

    <!-- Phone Authentication -->
    <string name="phone_auth_title">We need your verification</string>
    <string name="phone_auth_subtitle">We sent you a code to verify\nyour phone number</string>
    <string name="phone_auth_not_receive">I didn\'t receive a code</string>
    <string name="phone_auth_resend">Resend</string>
    <string name="phone_auth_create_account">Create Account</string>

    <!-- Search -->
    <string name="search_hint">Search Hospital or Dr\'s Name</string>
    <string name="search_latest_history">Latest History</string>
    <string name="search_delete_all">Delete All</string>
    <string name="search_result">Search Result</string>

    <!-- Reservation -->
    <string name="reservation_title">Consultation Application</string>
    <string name="reservation_date_time">Choose date and time</string>
    <string name="reservation_problem">Tell me what is your problem</string>
    <string name="reservation_problem_hint">Your Problem</string>
    <string name="reservation_contact">How do I contact you?</string>
    <string name="reservation_type_voice">Voice</string>
    <string name="reservation_type_video">Video</string>
    <string name="reservation_complete">Make Reservation</string>

    <!-- Treatment List -->
    <string name="treatment_list_title">Pocket Doctor Treatment Rooms</string>

    <!-- Reports -->
    <string name="reports_title">My Medical Reports</string>

    <!-- Find Account -->
    <string name="find_account_title">Find Your Account</string>
    <string name="find_account_phone_num_hint">Phone Number</string>
    <string name="find_account_verify">Verify</string>
    <string name="find_account_code_hint">Verification Code</string>
    <string name="find_account_button">Find Account</string>

    <!-- Find Password -->
    <string name="find_password_title">Find Your Password</string>
    <string name="find_password_email_hint">Email</string>
    <string name="find_password_phone_number_hint">Phone Number</string>
    <string name="find_password_verify">Verify</string>
    <string name="find_password_code_hint">Verification Code</string>
    <string name="find_password_button">Find Password</string>

    <!-- Display Account -->
    <string name="display_account_title">Find Your Account</string>
    <string name="display_account_subtitle">Your Account is</string>
    <string name="display_account_login">Log In</string>
    <string name="display_account_find_password">Find Password</string>

    <!-- Change Password -->
    <string name="change_password_title">Change Your Password</string>
    <string name="change_password_email_hint">New Password</string>
    <string name="change_password_confirm_password_hint">New Password Again</string>
    <string name="change_password_button">Save Password</string>

    <!-- Splash -->
    <string name="splash_logo">Pocket Doctor</string>

    <!-- My Page -->
    <string name="my_page_title">My Page</string>
    <string name="my_page_user">Please Login First</string>
    <string name="my_page_update_info">Update My Information</string>
    <string name="my_page_notification">Notification</string>
    <string name="my_page_notice">Notice</string>
    <string name="my_page_license">License</string>
    <!--Reports-->
    <string name="reports_fragment_title">My Medical Reports</string>

    <!--Medication-->
    <string name="medications_title">Your Medications</string>
    <string name="medication_register_title">Register your \nmedication schedules</string>
    <string name="medication_register_day">What day will you take it?</string>
    <string name="medication_register_day_mon">Mon</string>
    <string name="medication_register_day_tue">Tue</string>
    <string name="medication_register_day_wed">Wed</string>
    <string name="medication_register_day_thu">Thu</string>
    <string name="medication_register_day_fri">Fri</string>
    <string name="medication_register_day_sat">Sat</string>
    <string name="medication_register_day_sun">Sun</string>
    <string name="medication_register_time">When will you take it?</string>
    <string name="medication_register_name">Tell me your medication name</string>
    <string name="medication_register_button">Save Information</string>
    <string name="medication_name_hint">Name</string>


    <!--Update My Information-->
    <string name="update_profile_title">Update My Information</string>
    <string name="update_profile_name">Name</string>
    <string name="update_profile_pw">Password</string>
    <string name="update_profile_pw_again">Password Again</string>
    <string name="update_profile_save_btn">Save</string>
    <string name="update_profile_logout_btn">Logout</string>


    <!--Receive Notification-->
    <string name="receive_notification_title">Receive Notification</string>
    <string name="notification_all">Notification All</string>
    <string name="notification_only_medication">Notification Only Medication</string>

    <string name="signup_message_tos"><u>Terms of Service</u></string>
    <string name="signup_message_privacy"><u>Terms of Privacy</u></string>
    <string name="signup_email_title">Email</string>
    <string name="signup_message_check_email">Please Check Your Email Format</string>
    <string name="signup_name_title">Name</string>
    <string name="signup_message_password_notice">Please enter at least 8 characters\nincluding English and numbers.</string>
    <string name="signup_password_title">Password</string>
    <string name="signup_password_again_title">Password Again</string>
    <string name="signup_phone_number_notice">Please enter full phone number\nex. 010-1234-5678</string>
    <string name="signup_phone_number_title">Phone Number</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="verify_email">Verify my account</string>
    <string name="verify_email_title">Verify My Account</string>
    <string name="verify_email_notice">We sent a verification code to your E-Mail.\nPlease enter your verification code.</string>
    <string name="verification_code_again"><u>I don\'t get verification code.</u></string>
    <string name="verification_code">Verification Code</string>
    <string name="code_err_message">Please check again. (Not Correct)</string>
    <string name="verify_account">Verify Account</string>
    <string name="verify_email_success">Verify Email Success</string>
    <string name="log_out">Log out</string>


</resources>
