<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.signup.SignUpPhoneNumberFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            style="@style/BaseTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/signup_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pb_signup_indicator"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:max="90"
        android:progress="90"
        android:progressBackgroundTint="@color/hint_gray"
        android:progressTint="@color/primary_second_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_title" />

    <TextView
        android:id="@+id/tv_phone_number_notice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="start"
        android:text="@string/signup_phone_number_notice"
        android:textColor="@color/text_body_dark_gray"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/pb_signup_indicator"
        app:layout_constraintTop_toBottomOf="@id/pb_signup_indicator" />

    <TextView
        android:id="@+id/tv_phone_number"
        style="@style/BaseSubtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/signup_phone_number_title"
        app:layout_constraintStart_toStartOf="@id/tv_phone_number_notice"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number_notice" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:textSize="14sp"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@drawable/selector_edit_text_tracker_primary_blue"
        android:hint="@string/signup_phone_hint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number" />

    <TextView
        android:id="@+id/tv_message_check_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/accent_red"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_phone_number" />

    <TextView
        android:id="@+id/tv_message_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/text_body_dark_gray"
        app:layout_constraintBottom_toTopOf="@id/tv_message_privacy"
        app:layout_constraintStart_toStartOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="@id/btn_next"
        android:text="@string/signup_message_tos" />

    <TextView
        android:id="@+id/tv_message_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textColor="@color/text_body_dark_gray"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintStart_toStartOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="@id/btn_next"
        android:text="@string/signup_message_privacy" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/rectangle_light_gray_radius_20"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/signup_create"
        android:textAllCaps="false"
        android:textColor="@color/background_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>